Instrument - fix layout shifting style issue ButtonControl - convert to Typescript Tooltips - polish styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -59,13 +59,22 @@ body {
 	display: flex;
 	height: 19rem;
 	padding: 1rem 0;
-	justify-content: flex-end;
-	align-items: center;
+
+	#instr-right-top-left {
+	}
+
+	#instr-right-top-right {
+		display: flex;
+		flex: 1;
+		align-items: center;
+	}
 
 	#global-section {
 		display: flex;
-		flex-flow: row wrap;
+		height: 100%;
+		flex-flow: column nowrap;
 		justify-content: center;
+		align-items: center;
 
 		#logo-section {
 			cursor: default;
@@ -74,12 +83,9 @@ body {
 
 			width: 13rem;
 			height: 4.375rem;
-			margin: 0 0 1.5rem 0;
+			margin-bottom: 1.5rem;
 
 			#logo {
-				// font-family:"Heroic Avenger", sans-serif;
-				// font-size:2.5rem;
-
 				width: 12rem;
 			}
 
@@ -372,14 +378,14 @@ body {
 
 	.knob-control-value {
 		width: 100%;
-		margin: 0.25rem auto 0;
+		margin: 0.3125rem auto 0;
 		padding: 0 0 0.0625rem;
 		background-color: $color-tooltip-background;
 		border-radius: 1rem;
 
 		text-align: center;
 		font-size: 0.5625rem;
-		font-weight: 700;
+		font-weight: 800;
 
 		@include transition(0.1s all ease-out);
 	}
